--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 /* ==========================================================================
    CSS Normalization, based on
    normalize.css 2012-07-07T09:50 UTC - http://github.com/necolas/normalize.css 
@@ -102,39 +103,19 @@ sub {
    Lists
    ========================================================================== */
 /*
-* Addresses margins set differently in IE6/7.
+* Remove default padding
 */
-/* line 108, src/_normalize.scss */
-dl,
-menu,
-ol,
+/* line 104, src/_normalize.scss */
 ul {
-  margin: 1em 0;
-}
-
-/* line 112, src/_normalize.scss */
-dd {
-  margin: 0 0 0 40px;
+  padding-left: 0;
 }
 
 /*
-* Addresses paddings set differently in IE6/7.
+* Remove style decorations
 */
-/* line 122, src/_normalize.scss */
-menu,
-ol,
-ul {
-  padding: 0 0 0 40px;
-}
-
-/*
-* Corrects list images handled incorrectly in IE7.
-*/
-/* line 131, src/_normalize.scss */
-nav ul,
-nav ol {
+/* line 111, src/_normalize.scss */
+ul li {
   list-style: none;
-  list-style-image: none;
 }
 
 /* =============================================================================
@@ -143,12 +124,12 @@ nav ol {
 /*
  * Define consistent margin and padding
  */
-/* line 145, src/_normalize.scss */
+/* line 124, src/_normalize.scss */
 form {
   margin: 0;
 }
 
-/* line 149, src/_normalize.scss */
+/* line 128, src/_normalize.scss */
 fieldset {
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
@@ -158,7 +139,7 @@ fieldset {
  * 1. Improves usability and consistency of cursor style between image-type 'input' and others
  * 2. Corrects inability to style clickable 'input' types in iOS
  */
-/* line 163, src/_normalize.scss */
+/* line 142, src/_normalize.scss */
 button,
 input[type="button"],
 input[type="reset"],
@@ -174,7 +155,7 @@ input[type="submit"] {
 * 2. Addresses margins set differently in IE6/7, FF3+, S5, Chrome.
 * 3. Improves appearance and consistency in all browsers.
 */
-/* line 177, src/_normalize.scss */
+/* line 156, src/_normalize.scss */
 button,
 input,
 select,
@@ -194,7 +175,7 @@ textarea {
 * 3. Improves usability and consistency of cursor style between image-type
 * `input` and others.
 */
-/* line 194, src/_normalize.scss */
+/* line 173, src/_normalize.scss */
 button,
 html input[type="button"],
 input[type="reset"],
@@ -208,7 +189,7 @@ input[type="submit"] {
 /*
 * Re-set default cursor for disabled elements.
 */
-/* line 205, src/_normalize.scss */
+/* line 184, src/_normalize.scss */
 button[disabled],
 input[disabled] {
   cursor: default;
@@ -217,7 +198,7 @@ input[disabled] {
 /*
  * Removes inner padding and search cancel button in S5, Chrome on OS X
  */
-/* line 214, src/_normalize.scss */
+/* line 193, src/_normalize.scss */
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
@@ -227,7 +208,7 @@ input[type="search"]::-webkit-search-cancel-button {
 * 1. Addresses `appearance` set to `searchfield` in S5, Chrome.
 * 2. Addresses `box-sizing` set to `border-box` in S5, Chrome.
 */
-/* line 223, src/_normalize.scss */
+/* line 202, src/_normalize.scss */
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
@@ -239,7 +220,7 @@ input[type="search"] {
 /*
 * Removes inner padding and search cancel button in S5, Chrome on OS X.
 */
-/* line 234, src/_normalize.scss */
+/* line 213, src/_normalize.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
@@ -248,7 +229,7 @@ input[type="search"]::-webkit-search-decoration {
 /*
 * Improves readability and alignment in all browsers.
 */
-/* line 243, src/_normalize.scss */
+/* line 222, src/_normalize.scss */
 textarea {
   vertical-align: top;
 }
@@ -259,7 +240,7 @@ textarea {
 /*
 * Remove most spacing between table cells.
 */
-/* line 256, src/_normalize.scss */
+/* line 235, src/_normalize.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -516,16 +497,16 @@ a:focus {
   border-radius: 5px;
   padding: 1em;
   position: absolute;
+  overflow: hidden;
 }
-/* line 106, ../_source/css/sass/_mootor.ui.scss */
+/* line 107, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list {
   font-size: 2em;
-  background: #FFF;
   border-radius: 5px;
-  overflow-y: scroll;
 }
-/* line 112, ../_source/css/sass/_mootor.ui.scss */
+/* line 111, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list li {
+  background: #FFF;
   padding: 1em;
   border-bottom: 1px solid #CCC;
   white-space: nowrap;
@@ -579,6 +560,25 @@ a:focus {
   border-top: 1.5em solid #999;
 }
 /* line 158, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form div.moo-ui-selectmultiple {
+  display: inline;
+  float: right;
+  border: 1px solid #666;
+  margin-top: -1.5em;
+  margin-left: -0.2em;
+  border-radius: 5px;
+  background-color: white;
+  position: relative;
+  padding: 0.25em 0.25em 0.25em 0.25em;
+  width: 75%;
+  height: 3em;
+  z-index: 300;
+}
+/* line 172, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form select.moo-ui-selectmultiple {
+  margin-left: 0.5em;
+}
+/* line 175, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .cleanbox {
   display: block;
   padding: 0.35em;
@@ -590,20 +590,20 @@ a:focus {
   font-weight: 700;
   text-decoration: none;
 }
-/* line 169, ../_source/css/sass/_mootor.ui.scss */
+/* line 186, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio {
   display: inline;
   float: right;
   position: relative;
   width: 75%;
 }
-/* line 173, ../_source/css/sass/_mootor.ui.scss */
+/* line 190, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio input {
   position: absolute;
   top: 0.5em;
   left: 0.5em;
 }
-/* line 178, ../_source/css/sass/_mootor.ui.scss */
+/* line 195, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label {
   position: relative;
   display: block;
@@ -611,7 +611,7 @@ a:focus {
   background: #FFF;
   font-size: 1.4em;
 }
-/* line 184, ../_source/css/sass/_mootor.ui.scss */
+/* line 201, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label .moo-ui-radio-icon {
   display: block;
   position: absolute;
@@ -623,12 +623,12 @@ a:focus {
   width: 1em;
   height: 1em;
 }
-/* line 194, ../_source/css/sass/_mootor.ui.scss */
-.moo-ui-form .moo-ui-radio label .moo-ui-radio-icon.moo-radio-active {
+/* line 211, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-radio label .moo-ui-radio-icon.moo-ui-radio-active {
   background-color: #666;
 }
-/* line 196, ../_source/css/sass/_mootor.ui.scss */
-.moo-ui-form .moo-ui-radio label .moo-ui-radio-icon.moo-radio-active:after {
+/* line 213, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-radio label .moo-ui-radio-icon.moo-ui-radio-active:after {
   content: " ";
   display: block;
   position: absolute;
@@ -647,20 +647,20 @@ a:focus {
   width: 0.6em;
   height: 0.6em;
 }
-/* line 212, ../_source/css/sass/_mootor.ui.scss */
+/* line 229, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox {
   display: inline;
   float: right;
   position: relative;
   width: 75%;
 }
-/* line 216, ../_source/css/sass/_mootor.ui.scss */
+/* line 233, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox input {
   position: absolute;
   top: 0.5em;
   left: 0.5em;
 }
-/* line 221, ../_source/css/sass/_mootor.ui.scss */
+/* line 238, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label {
   position: relative;
   display: block;
@@ -668,7 +668,7 @@ a:focus {
   background: #FFF;
   font-size: 1.4em;
 }
-/* line 227, ../_source/css/sass/_mootor.ui.scss */
+/* line 244, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon {
   display: block;
   position: absolute;
@@ -679,12 +679,12 @@ a:focus {
   width: 1em;
   height: 1em;
 }
-/* line 236, ../_source/css/sass/_mootor.ui.scss */
-.moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-checkbox-active {
+/* line 253, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-ui-checkbox-active {
   background-color: #666;
 }
-/* line 238, ../_source/css/sass/_mootor.ui.scss */
-.moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-checkbox-active:after {
+/* line 255, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-ui-checkbox-active:after {
   content: " ";
   display: block;
   position: absolute;
@@ -703,7 +703,7 @@ a:focus {
   height: 0.6em;
 }
 
-/* line 258, ../_source/css/sass/_mootor.ui.scss */
+/* line 275, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-switch {
   display: block;
   height: 28px;
@@ -711,7 +711,7 @@ a:focus {
   overflow: hidden;
   float: right;
 }
-/* line 265, ../_source/css/sass/_mootor.ui.scss */
+/* line 282, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-switch b {
   -webkit-transition-duration: .25s;
   background: url(../img/ui/switch.png);
@@ -720,16 +720,16 @@ a:focus {
   display: block;
   -webkit-transform: translate3d(0, 0, 0);
 }
-/* line 274, ../_source/css/sass/_mootor.ui.scss */
+/* line 291, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-switch.off b {
   -webkit-transform: translate3d(-54px, 0, 0);
 }
-/* line 277, ../_source/css/sass/_mootor.ui.scss */
+/* line 294, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-switch label {
   line-height: 28px;
 }
 
-/* line 283, ../_source/css/sass/_mootor.ui.scss */
+/* line 300, ../_source/css/sass/_mootor.ui.scss */
 .moo_tooltip {
   position: absolute;
   line-height: 140%;
