Code improvements, bugfixes.
* Major code redesign in Nav
* Improvements on Gestures
* Bugfixes in panels (prevents default scrolling)

--- a/_source/css/sass/_mootor.ui.scss
+++ b/_source/css/sass/_mootor.ui.scss
@@ -4,7 +4,7 @@
 .moo-ui-form {
     text-align: left;
     width: 90%;
-    margin: 0 auto;
+    margin: 2em auto;
     background-color: #FFF;
     border: 1px solid #CCC;
     border-radius: 5px;
