--- a/_source/css/sass/_mootor.nav.scss
+++ b/_source/css/sass/_mootor.nav.scss
@@ -48,7 +48,7 @@ body, html {
     right: 0;
     top: 0;
     bottom: 0;
-    background: #0000ff;
+    background: $subColor1B;
 
     .moo-panel {
         min-height: 100%;
