--- a/index.haml
+++ b/index.haml
@@ -27,6 +27,7 @@
         .moo-panel#nav
         .moo-panel#item1
         .moo-panel#item2
+        
         .moo-panel#geolocalization
             %h2 Geolocalization
             %h3 This module is not activated. See $.geolocation
@@ -47,15 +48,23 @@
 
        $(document).ready(function(){
        
-           // Application & Navigation panels
-           $.app({
+           "use strict";
+       
+           // Navigation panels
+           var myNav = $("#panels").nav(),
+       
+           // Application
+           myApp = $.app({
                views: [
                     "ui",
                     "nav",
                     "item1",
                     "item2"
                ],
-               nav: $("#panels").nav()
+               nav: myNav
            });
+           
+           // Preload a view
+           myApp.load(myApp.views[0], myNav.get("ui"));           
                                   
        });
